...
    // MARK: - View
    
    var body: some View {
        VStack {
            self.makeNumericVolumeInputView()
                .focused($volumeFieldIsFocused)
                .accessibilityIdentifier("VolumeInputView - volumeInput")
            self.makeNumericLineInputView()
                .focused($lineFieldIsFocused)
                .accessibilityIdentifier("VolumeInputView - lineInput")
        }
        .toolbar {
            ToolbarItem(placement: .keyboard) {
                Button {
                    if volumeFieldIsFocused == true { volumeFieldIsFocused.toggle() }
                    if lineFieldIsFocused == true { lineFieldIsFocused.toggle() }
...
