...
            Rectangle()
                .size(CGSize(width: volumeControlWidth, height: viewModel.barMaximumValue))
        )
        
        // MARK: - Volume Setting Display
        Text("Volume set at : \(viewModel.getVolume()) %")
            .accessibilityIdentifier("VolumeController - volumeDisplay")
    }
    
    // MARK: - Private Factory Methods
    
    private func makeVolumeInputView() -> VolumeInputView {
        let maxVolume = Int(viewModel.maximumVolume)
...
